[tool.poetry]
name = "testcontainers-gcp"
version = "0.0.1rc2"
description = "Google Cloud Platform component of testcontainers-python."
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/testcontainers/testcontainers-python"

[tool.poetry.dependencies]
testcontainers-core = "*"
google-cloud-pubsub = ">=2"
# python_requires=">=3.7",
python = ">=3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

