[tool.poetry]
name = "testcontainers-mysql"
version = "0.0.1rc2"
description = "MySQL component of testcontainers-python."
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/testcontainers/testcontainers-python"

[tool.poetry.dependencies]
testcontainers-core = "*"
sqlalchemy = "*"
pymysql[rsa] = "*"
# python_requires=">=3.7",
python = ">=3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

